# omicverse-skills

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: release.yml
src/omicverse_skills/: __init__.py  notebook_index.json  notebook_index.py  registry.py
src/omicverse_skills/skills/bulk-celltype-deconvolution/: SKILL.md  reference.md
src/omicverse_skills/skills/bulk-combat-correction/: SKILL.md
src/omicverse_skills/skills/bulk-deg-analysis/: SKILL.md
src/omicverse_skills/skills/bulk-deseq2-analysis/: SKILL.md
src/omicverse_skills/skills/bulk-fastq-quantification/: SKILL.md
src/omicverse_skills/skills/bulk-metabol-multivariate/: SKILL.md  reference.md
src/omicverse_skills/skills/bulk-metabol-pathway-multifactor/: SKILL.md  reference.md
src/omicverse_skills/skills/bulk-metabol-preprocessing/: SKILL.md  reference.md
src/omicverse_skills/skills/bulk-metabol-untargeted-lipidomics/: SKILL.md  reference.md
src/omicverse_skills/skills/bulk-to-single-deconvolution/: SKILL.md
src/omicverse_skills/skills/bulk-trajblend-interpolation/: SKILL.md
src/omicverse_skills/skills/bulk-wgcna-analysis/: SKILL.md
src/omicverse_skills/skills/cross-modal-celltype-transfer/: SKILL.md
src/omicverse_skills/skills/gsea-enrichment/: SKILL.md
src/omicverse_skills/skills/micro-metabol-paired/: SKILL.md  reference.md
src/omicverse_skills/skills/microbiome-16s-amplicon-dada2/: SKILL.md  reference.md
src/omicverse_skills/skills/microbiome-da-comparison/: SKILL.md  reference.md
src/omicverse_skills/skills/microbiome-phylogeny/: SKILL.md  (+1 more)
(+168 files in other folders)
