[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omicverse-skills"
version = "0.3.1"
description = "Standalone OmicVerse skills catalog"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  {name = "Zehua Zeng", email = "starlitnightly@gmail.com"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/Starlitnightly/omicclaw"
Repository = "https://github.com/Starlitnightly/omicclaw"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["omicverse_skills*"]

[tool.setuptools.package-data]
omicverse_skills = [
  "skills/*/*.md",
  "skills/*/*/*.md",
  "skills/*/assets/*.json",
  "notebook_index.json",
]

[project.scripts]
omicverse-skills-index = "omicverse_skills.notebook_index:_cli"
